--- a/cancer_cell_classification.ipynb
+++ b/cancer_cell_classification.ipynb
@@ -216,12 +216,12 @@
     "    for bar, pos, name, score in zip(bars, positions, podium_names, podium_scores):\n",
     "        plt.text(bar.get_x() + bar.get_width()/2, bar.get_height() + 0.5,\n",
     "                 \"{}\\n{}\\n Model Accuracy: {}%\".format(pos, name, score),\n",
-    "                 ha = \"center\", va = \"bottom\", fontsize = 12, weight = \"bold\", color = \"white\")\n",
+    "                 ha = \"center\", va = \"bottom\", fontsize = 12, weight = \"bold\", color = \"black\")\n",
     "    # Cleanup\n",
     "    plt.xticks([])\n",
     "    plt.yticks([])\n",
     "    plt.ylim(0, max(heights) + 6)\n",
-    "    plt.title(\"Model Rankings\", fontsize=14, color=\"white\")\n",
+    "    plt.title(\"Model Rankings\", fontsize=14, color=\"black\")\n",
     "    plt.box(False)\n",
     "    plt.show()"
    ]
